force-app/main/default/objects/custom_create384__c/custom_create384__c.object-meta.xml
<CustomObject>
    <label>Custom created object384</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects384</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>