force-app/main/default/objects/custom_create384__c/fields/custom_create_384field506__c.field-meta.xml
<CustomField>
    <fullName>custom_create_384field506__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 384field506</label>
    <type>Checkbox</type>
</CustomField>